fixed picture, readjusted alignment, added top border

--- a/app/assets/stylesheets/donations.scss
+++ b/app/assets/stylesheets/donations.scss
@@ -60,7 +60,7 @@ background: #F9F9F9 !important;
 border: 2px solid #D3D3D3 !important;
 border-radius: 6px;
 display: inline-block;
-width: 25%;
+width: 32.7%;
 }
 
 .buttoncustom:hover {
@@ -71,11 +71,12 @@ transition: all 0.3s ease 0s;
 
 .donatetext {
 margin-top: 10px; 
+margin-left: 4px;
 background: #FFFFFF !important;
 border: 2px solid #D3D3D3 !important;
 border-radius: 6px;
 display: inline-block;
-width: 75%;
+width: 32.7%;
 height: 42px;
 }
 
